--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <p><span style="color: #00ff00; background-color: #00ccff;">Hi this is a test</span></p>
+<li><a href="https://nathaliejborst.github.io/thesis/thesis.html">click</a></li>
+<li><a href="https://github.com/nathaliejborst/thesis/blob/master/thesis.html"> click 2</a></li>
